<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aka"
    android:orientation="vertical"
    tools:context=".NightActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:gravity="center|right"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/tv_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/answer_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#686767"
            android:textSize="30sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/ac"
                android:textColor="#FF5722"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/sa"
                android:textColor="#FF5722"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_foiz"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/foiz"
                android:textColor="#FF5722"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_bolish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/bolu"
                android:textColor="#FF5722"
                android:textSize="23sp"
                app:cornerRadius="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_x"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/x"
                android:textColor="#FF5722"
                android:textSize="23sp"
                app:cornerRadius="12dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/min"
                android:textColor="#FF5722"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_qoshish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/qowu"
                android:textColor="#FF5722"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/gravity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="🌕"
                android:textColor="#FF5722"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/nol"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_tochka"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#735656"
                android:text="@string/nuqta"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_teng"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:backgroundTint="#FF3D00"
                android:text="@string/ten"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:cornerRadius="12dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>